--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header {
 
 section {
   width: 100%;
-  background-color: aliceblue;
+  background-color: red;
   position: relative;
 }
 
@@ -119,6 +119,32 @@ section {
   font-weight: normal;
   color: #fff;
   line-height: 2rem;
+}
+.skill-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.skill {
+  width: 25%;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  border-radius: 9px;
+  padding: 0.5rem 1rem;
+  margin: 0 1rem;
+  box-shadow: 10px 10px 10px -5px rgba(25, 42, 70, 0.2);
+}
+.skill-icon {
+  font-size: 2.5rem;
+  margin: 0 10px;
+}
+.skill-title {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 
 @media only screen and (min-width: 1200px) {
