--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,10 @@ section {
   visibility: visible;
   background-color: rgb(47, 48, 49);
 }
+#backtotop.show:hover {
+  background-color: blue;
+  cursor: pointer;
+}
 
 @media only screen and (min-width: 1200px) {
   .inner {
